# chatbot-platform-core

./: .env copy  .env.example  .gitignore  Dockerfile  Dockerfile.debug  LICENSE  README.md  alembic.ini  docker-compose.yml  docker_compose.yml  package.json  project_structure.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_database_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  analytics.py  auth.py  chat.py  config.py  health.py  knowledge.py
app/core/: config.py  database.py  logger.py  model_enums.py  pipeline.py  pipeline_nodes.py  redis.py  security.py
app/models/: __init__.py  auth_token.py  base.py  conversation.py  document.py  message.py  user.py
app/schemas/: __init__.py  analytics.py  auth.py  chat.py  config.py  knowledge.py  pipeline.py
app/services/: anthropic_client.py  auth_service.py  cache.py  conversation_manager.py  document_processor.py  email_service.py  huggingface_client.py  knowledge_base.py  llm_factory.py  mcp_client.py  mcp_registry.py  model_factory.py  model_router.py  openai_client.py  rate_limiting.py  relevance_checker.py  response_validator.py  session_manager.py  session_service.py  sms_service.py  vector_db.py
app/services/vector_adapters/: __init__.py  pinecone_adapter.py
app/utils/: __init__.py  analytics.py  conversation_utils.py  exceptions.py  logging.py  monitoring.py  redis_utils.py  token_utils.py
docs/: LiteLLM Product Report.md  ai-strategy.md  app_routes.md  arch-overview.md  openapi.md  openapi.yaml  reqs.md  run-the-app.md  test-guide.md  todo.md  vscode-debug.md
scripts/: generate_openapi.py
tests/: conftest.py
tests/test_api/: test_chat.py
tests/test_models/: test_conversation.py
tests/test_services/: test_auth.py
tools/: redis_test.html
